perf: изменена очистка таблиц - проводится через метод truncateTables из E2eTestBase - проверка, пустая ли таблица проводится методом assertTableIsEmpty в E2eTestBase возвращена BasicAuth в getBotTasks Заменены JsonNode на соответствующие DTO