@@ -1,13 +1,12 @@
 package org.example.e2etests.tests.data;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.databind.JsonNode;
 import io.jsonwebtoken.Claims;
 import io.jsonwebtoken.Jwts;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.kafka.clients.consumer.ConsumerRecords;
 import org.assertj.core.api.Assertions;
-import org.example.e2etests.dto.CreateProjectRequest;
+import org.example.e2etests.dto.*;
 import org.example.e2etests.tests.base.E2eTestBase;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -16,16 +15,14 @@ import org.springframework.test.jdbc.JdbcTestUtils;
 
 import java.io.IOException;
 import java.time.Duration;
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
-import java.util.concurrent.TimeUnit;
-import java.util.stream.StreamSupport;
+import java.util.*;
 
+import static java.util.concurrent.TimeUnit.SECONDS;
 import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
 import static org.awaitility.Awaitility.await;
-import static org.example.e2etests.HttpHeadersTestUtils.createHeaders;
+import static org.example.e2etests.util.HttpHeadersTestUtils.createHeaders;
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 
 @Slf4j
 public class ProjectSubmittedNotificationE2eTest extends E2eTestBase {
@@ -38,7 +35,7 @@ public class ProjectSubmittedNotificationE2eTest extends E2eTestBase {
     private static final String MENTOR_TELEGRAM_URL = "https://github.com/zhukovsd-mentor1";
     private static final long MENTOR_ID = 12745679L;
 
-    private static final List<String> TABLES_TO_TRUNCATE = List.of(
+    private static final Set<String> TABLE_TO_TRUNCATE = Set.of(
             AUTH_SERVICE_USERS_TABLE,
             PROJECT_SERVICE_PROJECTS_TABLE,
             PROFILE_SERVICE_PROJECT_TABLE,
@@ -50,12 +47,7 @@ public class ProjectSubmittedNotificationE2eTest extends E2eTestBase {
 
     @BeforeEach
     void setUp() {
-        jdbcTemplate.execute(
-                """
-                        TRUNCATE TABLE %s
-                        RESTART IDENTITY CASCADE
-                        """.formatted(String.join(", ", TABLES_TO_TRUNCATE))
-        );
+        truncateTables(TABLE_TO_TRUNCATE);
 
         assertTableIsEmpty(AUTH_SERVICE_USERS_TABLE);
         assertTableIsEmpty(PROJECT_SERVICE_PROJECTS_TABLE);
@@ -93,33 +85,24 @@ public class ProjectSubmittedNotificationE2eTest extends E2eTestBase {
 
     private void getBotTasks() throws IOException {
         HttpHeaders headers = new HttpHeaders();
-        String auth = "username:password";
-        byte[] encodedAuth = java.util.Base64.getEncoder().encode(
-                auth.getBytes(java.nio.charset.StandardCharsets.UTF_8)
-        );
-        headers.set("Authorization", "Basic " + new String(encodedAuth));
+        headers.setBasicAuth(botUsername, botPassword);
         headers.setContentType(MediaType.APPLICATION_JSON);
-        ResponseEntity<String> response = testRestTemplate.exchange(
+        headers.setContentType(MediaType.APPLICATION_JSON);
+        ResponseEntity<TasksResponseDto> response = testRestTemplate.exchange(
                 BOT_TASKS_ENDPOINT_COUNT_10,
                 HttpMethod.GET,
                 new HttpEntity<>(headers),
-                String.class
+                TasksResponseDto.class
         );
         assertEquals(HttpStatus.OK, response.getStatusCode());
-        JsonNode tasks = objectMapper.readTree(response.getBody()).get("tasks");
-        JsonNode notificationTask = StreamSupport.stream(tasks.spliterator(), false)
-                .filter(task ->
-                        NOTIFICATIONS_MENTORS_PROJECT_SUBMITTED_TOPIC.equals(
-                                task.path("taskType").asText()
-                        )
-                )
+        TaskDto notificationTask = response.getBody().tasks().stream()
+                .filter(taskDto -> NOTIFICATIONS_MENTORS_PROJECT_SUBMITTED_TOPIC.equals(taskDto.taskType()))
                 .findFirst()
                 .orElseThrow();
-        JsonNode mentors = notificationTask.path("payload").path("mentors");
-        assertThat(mentors.get(0)
-                .path("mentor_telegram_user_id")
-                .asLong()
-        ).isEqualTo(MENTOR_ID);
+        TaskPayloadDto payloadDto = notificationTask.payload();
+        assertNotNull(payloadDto, "Task payload should not be null");
+        assertThat(payloadDto.mentors()).isNotNull();
+        assertThat(payloadDto.mentors().getFirst().mentorTelegramUserId()).isEqualTo(MENTOR_ID);
     }
 
     private void createProjectViaFrontend(String accessToken) {
@@ -142,7 +125,7 @@ public class ProjectSubmittedNotificationE2eTest extends E2eTestBase {
 
         String clause = "author_telegram_user_id='%s'".formatted(telegramUserId);
         assertTableHasOneRecord(PROJECT_SERVICE_PROJECTS_TABLE, clause);
-        await().atMost(30, TimeUnit.SECONDS)
+        await().atMost(30, SECONDS)
                 .ignoreExceptions()
                 .untilAsserted(() -> {
                     assertProjectPersistedInGoogleSheet();
@@ -156,11 +139,6 @@ public class ProjectSubmittedNotificationE2eTest extends E2eTestBase {
         assertThat(count).isOne();
     }
 
-    private void assertTableIsEmpty(String tableName) {
-        int count = JdbcTestUtils.countRowsInTable(jdbcTemplate, tableName);
-        assertThat(count).isZero();
-    }
-
     private void assertNotificationTaskPersistedInDatabase(String taskType) throws JsonProcessingException {
         String payload = jdbcTemplate.queryForObject(
                 """
@@ -172,13 +150,14 @@ public class ProjectSubmittedNotificationE2eTest extends E2eTestBase {
                 taskType
         );
         Assertions.assertThat(payload).isNotBlank();
+        MentorImportMessageDto payloadDto = objectMapper.readValue(payload, MentorImportMessageDto.class);
+        assertNotNull(payloadDto, "Payload should not be null");
 
-        JsonNode mentors = objectMapper.readTree(payload).path("mentors");
-        assertThat(
-                mentors.get(0)
-                        .path("mentor_telegram_user_id")
-                        .asLong()
-        ).isEqualTo(MENTOR_ID);
+        assertNotNull(payloadDto.mentors(), "Mentors list should not be null");
+        assertThat(payloadDto.mentors().isEmpty()).isFalse();
+
+        MentorDto firstMentor = payloadDto.mentors().getFirst();
+        assertThat(firstMentor.mentorTelegramUserId()).isEqualTo(MENTOR_ID);
     }
 
     private void assertProjectPersistedInGoogleSheet() throws IOException {
